--- a/ToDo/React/wickedev_project/package.json
+++ b/ToDo/React/wickedev_project/package.json
@@ -1,30 +1,74 @@
 {
-  "name": "wickedev_project",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@types/jest": "24.0.11",
-    "@types/node": "11.11.3",
-    "@types/react": "16.8.8",
-    "@types/react-dom": "16.8.2",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
-    "react-scripts": "2.1.8",
-    "typescript": "3.3.3333"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+    "name": "wickedev_project",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@types/jest": "24.0.11",
+        "@types/node": "11.11.3",
+        "@types/react": "16.8.8",
+        "@types/react-dom": "16.8.2",
+        "react": "^16.8.4",
+        "react-dom": "^16.8.4",
+        "react-scripts": "2.1.8",
+        "typescript": "3.3.3333"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject",
+        "lint": "tslint src/**/*.ts",
+        "format": "prettier --write \"**/*\""
+    },
+    "eslintConfig": {
+        "extends": "react-app"
+    },
+    "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"],
+    "devDependencies": {
+        "husky": "^1.3.1",
+        "lint-staged": "^8.1.5",
+        "node-sass": "^4.11.0",
+        "prettier": "^1.16.4",
+        "tslint": "^5.14.0",
+        "tslint-config-prettier": "^1.18.0",
+        "tslint-plugin-prettier": "^2.0.1"
+    },
+    "prettier": {
+        "parser": "typescript",
+        "semi": false,
+        "singleQuote": true,
+        "overrides": [
+            {
+                "files": "*.json",
+                "options": {
+                    "parser": "json"
+                }
+            },
+            {
+                "files": "*.css",
+                "options": {
+                    "parser": "css"
+                }
+            },
+            {
+                "files": "*.scss",
+                "options": {
+                    "parser": "scss"
+                }
+            }
+        ]
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "lint-staged"
+        }
+    },
+    "lint-staged": {
+        "*.{ts,tsx,js,jsx}": [
+            "prettier --write",
+            "tslint -c tslint.json --fix",
+            "git add"
+        ],
+        "*.{json,css,scss}": ["prettier --write", "git add"]
+    }
 }
