--- a/ToDo/React/wickedev_project/tsconfig.json
+++ b/ToDo/React/wickedev_project/tsconfig.json
@@ -14,7 +14,11 @@
         "isolatedModules": true,
         "noEmit": true,
         "jsx": "preserve",
-        "experimentalDecorators": true
+        "experimentalDecorators": true,
+        "baseUrl": ".",
+        "paths": {
+            "~/*": ["src/*"]
+        }
     },
     "include": ["src"]
 }
