--- a/.travis.yml
+++ b/.travis.yml
@@ -6,19 +6,21 @@ env:
   - CI=true
 
 cache:
+  yarn: true
   directories:
     - node_modules # NPM packages
 
 before_install:
+  - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.13.0
+  - export PATH=$HOME/.yarn/bin:$PATH
   - cd ToDo/React/wickedev_project
-
 
 # command to install dependencies
 install:
-  - npm ci
+  - yarn
 
 # command to run tests
 script:
-  - npm run test
-  - npm run lint
-  - npm run build
+  - yarn test
+  - yarn lint
+  - yarn build
