--- a/.travis.yml
+++ b/.travis.yml
@@ -13,14 +13,17 @@ cache:
 before_install:
   - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.13.0
   - export PATH=$HOME/.yarn/bin:$PATH
-  - cd ToDo/React/wickedev_project
 
 # command to install dependencies
 install:
-  - yarn
+  - yarn --cwd ToDo/React/wickedev_project
+  - yarn --cwd Login/React/wickedev_project
 
 # command to run tests
 script:
-  - yarn test
-  - yarn lint
-  - yarn build
+  - yarn --cwd ToDo/React/wickedev_project test
+  - yarn --cwd ToDo/React/wickedev_project lint
+  - yarn --cwd ToDo/React/wickedev_project build
+  - yarn --cwd Login/React/wickedev_project test
+  - yarn --cwd Login/React/wickedev_project lint
+  - yarn --cwd Login/React/wickedev_project build
