--- a/Login/React/wickedev_project/package.json
+++ b/Login/React/wickedev_project/package.json
@@ -10,6 +10,7 @@
         "@types/node": "11.11.3",
         "@types/react": "16.8.8",
         "@types/react-dom": "16.8.2",
+        "axios": "^0.18.0",
         "babel-core": "7.0.0-bridge.0",
         "babel-eslint": "9.0.0",
         "babel-jest": "23.6.0",
@@ -50,12 +51,15 @@
         "react-app-polyfill": "^0.2.2",
         "react-dev-utils": "^8.0.0",
         "react-dom": "^16.8.4",
+        "react-router": "^5.0.0",
+        "react-router-dom": "^5.0.0",
         "resolve": "1.10.0",
         "sass-loader": "7.1.0",
         "style-loader": "0.23.1",
         "terser-webpack-plugin": "1.2.2",
         "typescript": "3.3.3333",
         "url-loader": "1.1.2",
+        "use-react-router": "^1.0.5",
         "uuid": "^3.3.2",
         "webpack": "4.28.3",
         "webpack-dev-server": "3.1.14",
@@ -72,8 +76,16 @@
     "eslintConfig": {
         "extends": "react-app"
     },
-    "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"],
+    "browserslist": [
+        ">0.2%",
+        "not dead",
+        "not ie <= 11",
+        "not op_mini all"
+    ],
     "devDependencies": {
+        "@types/axios": "^0.14.0",
+        "@types/react-router": "^4.4.5",
+        "@types/react-router-dom": "^4.3.1",
         "@types/uuid": "^3.4.4",
         "husky": "^1.3.1",
         "lint-staged": "^8.1.5",
@@ -120,13 +132,24 @@
             "tslint -c tslint.json --fix",
             "git add"
         ],
-        "*.{json,css,scss}": ["prettier --write", "git add"],
-        "ignore": ["config", "scripts"]
+        "*.{json,css,scss}": [
+            "prettier --write",
+            "git add"
+        ],
+        "ignore": [
+            "config",
+            "scripts"
+        ]
     },
     "jest": {
-        "collectCoverageFrom": ["src/**/*.{js,jsx,ts,tsx}", "!src/**/*.d.ts"],
+        "collectCoverageFrom": [
+            "src/**/*.{js,jsx,ts,tsx}",
+            "!src/**/*.d.ts"
+        ],
         "resolver": "jest-pnp-resolver",
-        "setupFiles": ["react-app-polyfill/jsdom"],
+        "setupFiles": [
+            "react-app-polyfill/jsdom"
+        ],
         "testMatch": [
             "<rootDir>/src/**/__tests__/**/*.{js,jsx,ts,tsx}",
             "<rootDir>/src/**/?(*.)(spec|test).{js,jsx,ts,tsx}"
@@ -165,6 +188,8 @@
         ]
     },
     "babel": {
-        "presets": ["react-app"]
+        "presets": [
+            "react-app"
+        ]
     }
 }
