--- a/Login/React/code-reading-project/package.json
+++ b/Login/React/code-reading-project/package.json
@@ -39,6 +39,7 @@
     "mini-css-extract-plugin": "0.5.0",
     "mobx": "^5.9.0",
     "mobx-react": "^5.4.3",
+    "node-sass": "^4.11.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.2.1",
     "postcss-flexbugs-fixes": "4.1.0",
